--- a/Day-32-Bithday-Wisher/pyproject.toml
+++ b/Day-32-Bithday-Wisher/pyproject.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "pandas>=2.2.3",
 ]
